// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overlay snapshots should match snapshot when isVisible="false" 1`] = `
<Overlay
  isScrollable={false}
  isVisible={false}
  onClose={[Function]}
  shouldCloseOnClick={true}
  transparent={false}
>
  <CSSTransition
    classNames="luk-fade"
    in={false}
    mountOnEnter={true}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </CSSTransition>
</Overlay>
`;

exports[`overlay snapshots should match snapshot when isVisible="true" 1`] = `
<Overlay
  isScrollable={false}
  isVisible={true}
  onClose={[Function]}
  shouldCloseOnClick={true}
  transparent={false}
>
  <CSSTransition
    classNames="luk-fade"
    in={true}
    mountOnEnter={true}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    >
      <Portal>
        <Portal
          containerInfo={
            <div
              lattice-portal-inner-container=""
            >
              <div
                class="umcYV"
              >
                <div
                  class="ezcjbU"
                >
                  <span>
                    hello
                  </span>
                </div>
              </div>
            </div>
          }
        >
          <LockToggle
            accountForScrollbars={true}
            isActive={true}
          >
            <SheetProvider
              accountForScrollbars={true}
              isActive={true}
            >
              <TouchProvider
                accountForScrollbars={true}
                isActive={true}
              >
                <ScrollLock
                  accountForScrollbars={true}
                  isActive={true}
                >
                  <TouchScrollable>
                    <OverlayOuterContainer
                      transparent={false}
                    >
                      <div
                        className="umcYV"
                      >
                        <OverlayInnerContainer
                          isScrollable={false}
                          onClick={[Function]}
                        >
                          <div
                            className="ezcjbU"
                            onClick={[Function]}
                          >
                            <span>
                              hello
                            </span>
                          </div>
                        </OverlayInnerContainer>
                      </div>
                    </OverlayOuterContainer>
                  </TouchScrollable>
                </ScrollLock>
              </TouchProvider>
            </SheetProvider>
          </LockToggle>
        </Portal>
      </Portal>
    </Transition>
  </CSSTransition>
</Overlay>
`;
